--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon build/index.js",
     "build:dev": "npx tsc --watch",
-    "build:prod": "npx tsc",
+    "build:prod": "npx -p typescript tsc --init",
     "start": "node build/index.js",
     "dev": "concurrently \"npm run build:dev\" \"npm run watch\""
   },
@@ -26,7 +26,6 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^7.4.1",
-    "short-unique-id": "^4.4.4",
-    "short-uuid": "^4.2.2"
+    "short-unique-id": "^4.4.4"
   }
 }
