--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon build/index.js",
     "build:dev": "npx tsc --watch",
-    "build:prod": "npx -p typescript tsc --init",
+    "build:prod": "npx -p typescript tsc",
     "start": "node build/index.js",
     "dev": "concurrently \"npm run build:dev\" \"npm run watch\""
   },
